css/style.css
/*  General
------------------------------------------
------------------------------------------ */
body {
	background-color: #eee;
}

a {
	text-decoration: none;
	color: #333;
	font-family: 'Open Sans', sans-serif;
	font-weight: 300;
}
h1 {
	font-family: 'Open Sans', sans-serif;
	font-weight: 300;
} 

h2, h3 {
	font-family: 'Open Sans', sans-serif;
}
p {
	font-family: 'Open Sans', sans-serif;
	font-weight: 300;

}
ul {
	padding: 0;
}
li {
	font-family: 'Open Sans', sans-serif;
	font-weight: 300;
	list-style: none;
}



/*  General page/column layout
------------------------------------------
------------------------------------------ */
.col_content {
	width: 90%;
	margin: auto;
	padding: 5% 0;
}
.col_content li {
	margin-bottom: 5px;
}
.col {
	margin-top: 2%;
}
.secondary ul {
	padding-bottom: 20px;
}

/* Phones to Tablets */
@media only screen and (min-width: 481px) {
	.col {
		float: left;
	}
	.main {
		width: 66%;
	}
	.secondary {
		width: 32%; 
	}
	.secondary {
		margin-left: 2%;
	}
}



/*  Header
------------------------------------------
------------------------------------------ */
#page-header {
	width: 100%;
	float: left;
	position: fixed;
	z-index: 2;
	background-color: #fff;
	-webkit-box-shadow: 0px 0px 5px 0px #333;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
	-moz-box-shadow:    0px 0px 5px 0px #333;  /* Firefox 3.5 - 3.6 */
	box-shadow:         0px 0px 5px 0px #333;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
}
#title {
	float: left;
	margin-left: 15px;
	font-variant: small-caps;
}
#title h1 {
	color: #777;
	font-size: 1em;
	padding-top: 15px;
}
#nav.js {
	padding-top: 80px;
	margin: 0;
	text-align: center;
	font-size: 1em;
	text-transform: uppercase;
}
#nav ul {
	list-style: none;
}
#nav li {
	width: 100%;
	padding: 13px 0;
	border-top: #ddd solid 1px;
}
#nav a {
	padding: 0 70px;
	color: #777;


}
/*Menu button press, Nav list appears drop down*/
@media screen and (max-width: 768px) {
	#menu {
		width:1.4em;
		display: block;
		color: #ccc;
		background:#fff;
		border-radius: 5px;
		font-size:2em;
		text-align: center;
		float: right;
		width: 45px;
		height: 45px;
		margin: 15px;
		-webkit-box-shadow: 1px 1px 2px 1px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
		-moz-box-shadow:    1px 1px 2px 1px #ccc;  /* Firefox 3.5 - 3.6 */
		box-shadow:         1px 1px 2px 1px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
	}
	#nav.js {
		display: none;
	}
}
@media screen and (min-width: 401px) {
		#title h1 {
		font-size: 1.5em;
		padding-top: 7px;
	}
}
/*Hamberger button removed, nav list appears on right*/
@media screen and (min-width: 769px) {
/*Hamberger button removed, nav list appears on right*/
	#menu {
		display: none;
	}
	#nav.js {
		width: 55%;
		float: right;
		padding-top: 20px;
	}
	
	#nav li {
		display: inline-block;
		width: 26.6666%;
		border: none;
		text-align: right;
	}
	#nav a.selected {
		font-weight: 400;
		color: #666;
	}
	#nav a:hover {
		color: #A60014;
	}
}
@media screen and (min-width: 1250px) {
	#title h1 {
		font-size: 2em;
	}
}



/*  Footer
------------------------------------------
------------------------------------------ */
#page-footer {
	width: 100%;
	float: left;
	z-index: 2;
	background-color: #fff;
	-webkit-box-shadow: 0px 0px 5px 0px #333;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
	-moz-box-shadow:    0px 0px 5px 0px #333;  /* Firefox 3.5 - 3.6 */
	box-shadow:         0px 0px 5px 0px #333;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
}
#page-footer ul {
	text-align: center;
	width: 100%;
	float: left;
	list-style: none;
}
#page-footer li {
padding-top: 3px;
font-weight: 100;
font-size: .8em;
font-family: 'Crimson Text', serif;
}
#page-footer a {
	color: #A60014;
	font-family: 'Crimson Text', serif;
}
/* Phones to Tablets */
@media only screen and (min-width: 481px) {
#page-footer ul {
		width: 50%;
	}
}



/*  Home page 
------------------------------------------
------------------------------------------ */
#home-page-content {
	width: 80%;
	margin: -1530px 10%;
	position: relative;
  top: 4.7em;
  float: left;
}
#home-page-content p {
	font-size: 1.1em;
	text-align: center;
}
#home-page-content li {
	padding-left: 3px;
	padding-top: 5px;
	font-size: .9em;
/* 	border-bottom: #ccc solid 1px; */
	border-left: #A60014 solid 1px;
	margin: 0 0 0 1px;
}
#home-page-content h2 {
	font-variant: small-caps;
	text-align: center;
}
@media screen and (min-width: 401px) {
	#home-page {
		background-image: url(../img/backgroundLandHD.jpg);
		background-position: center top;
		background-repeat: no-repeat;
		background-attachment: fixed;
		background-size: cover;
	}
}

@media screen and (min-width: 768px) {
	#home-page-content {
		margin: -1150px 10%;
	}
}
@media screen and (min-width: 1250px) {
	#home-page {
	}
}

/*Opaque square over background image*/
#opaque-home-page-layer {
	float: left;
	width: 90%;
	background: #fff;
	background-position: center top;
	margin: 95px 5%;
	height: 1400px;
	opacity: .9;
}
@media screen and (max-width: 375px) {
	#opaque-home-page-layer {
	-webkit-box-shadow: 1px 1px 2px 1px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
	-moz-box-shadow:    1px 1px 2px 1px #ccc;  /* Firefox 3.5 - 3.6 */
	box-shadow:         1px 1px 2px 1px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
	}
}

@media screen and (min-width: 768px) {
	#opaque-home-page-layer {
		height: 1000px;
	}
}
@media screen and (min-width: 1250px) {
	#opaque-home-page-layer {
		margin-top: 130px;
	}
}



/*  Gallery page
------------------------------------------
------------------------------------------ */
.gallery-page-content {
	width: 90%;
	margin: 5%;
	padding-top: 70px;
	float: left;
	
}
.gallery {
  margin-bottom: 10px;
  list-style: none;
  height: 1000px;
}
.gallery li {
  float: left;
  width: 96%;
  margin: 1%;
}
.thumb {
  position: relative;
  overflow: hidden;
  padding: 0;
}
.thumb img {
  width: 100%;
} 
.thumb a .mask {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  overflow: hidden;
  text-align: center;
  background: rgba(238, 238, 238, 0.68);
  transition: all 0.8s ease-out;
  opacity: 0;
}
.thumb a:hover .mask {
  opacity:1;
} 
.thumb a .mask h3 {
  display:inline-block;
  margin-top: 20%;
  padding: 3px 12px;
  font-size: 14px;
  font-weight: 300;
  text-transform: uppercase;
  background: #505050;
  color: #fff;
  border-radius: 2px;
}

.thumb a .mask p {
  font-size: 15px;
  color: #505050;
}
/* Phones to Tablets */
@media only screen and (min-width: 481px) {
  .gallery li {
    width: 48%;
  }
}
@media all and (max-width: 767px) {
  .thumb a .mask {
    position: relative;
    background: none;
    opacity: 1;
    margin-top: 0;
    }
  .thumb a .mask h3 {
    margin-top: 0;
    }
}
.hide * {
  -webkit-transition: none !important;
  -moz-transition: none !important;
  -ms-transition: none !important;
  -o-transition: none !important;
}



/*  Contact page 
------------------------------------------
------------------------------------------ */
#contact-page-content {
	width: 80%;
	margin: -730px 10%;
	position: relative;
  top: 4.7em;
  float: left;
}
.contact-info {
  list-style: none;
  padding: 0;
  margin: 0;
  font-size: 0.9em; 
}  
.contact-info li {
	padding-bottom: 7px
}
.contact-info a {
  display:block;
  min-height: 20px;
  background-repeat: no-repeat;
  background-size: 20px 20px;
  padding: 0 0 0 30px;
  margin: 0 0 10px;
}

.contact-info li.phone a {
  background-image: url('../icon/phone.png');
}

.contact-info li.mail a {
  background-image: url('../icon/mail.png');
}

.contact-info li.address a {
  background-image: url('../icon/globe.png');
}

@media screen and (min-width: 401px) {
	#contact-page {
		background-image: url(../img/backgroundLandHD.jpg);
		background-position: center top;
		background-repeat: no-repeat;
		background-attachment: fixed;
		background-size: cover;
	}
}

@media screen and (min-width: 768px) {
	#home-page-content {
		margin: 0px 10%;
	}
}
@media screen and (min-width: 1250px) {
	#home-page {
	}
}

/*Opaque square over background image*/
#opaque-contact-page-layer {
	float: left;
	width: 90%;
	background: #fff;
	background-position: center top;
	margin: 95px 5%;
	height: 600px;
	opacity: .9;
}
@media screen and (max-width: 375px) {
	#opaque-contact-page-layer {
	-webkit-box-shadow: 1px 1px 2px 1px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
	-moz-box-shadow:    1px 1px 2px 1px #ccc;  /* Firefox 3.5 - 3.6 */
	box-shadow:         1px 1px 2px 1px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
	}
}

@media screen and (min-width: 768px) {
	#opaque-contact-page-layer {
	}
}
@media screen and (min-width: 1250px) {
	#opaque-contact-page-layer {
		margin-top: 130px;
	}
}

